--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta charset="UTF-8">
 
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <script src="javascript/myscript.js"></script>
+    <script>
+        var supportsPassive = false;
+        try {
+          var opts = Object.defineProperty({}, 'passive', {
+            get: function() {
+              supportsPassive = true;
+            }
+          });
+          window.addEventListener("testPassive", null, opts);
+          window.removeEventListener("testPassive", null, opts);
+        } catch (e) {}
+
+        document.addEventListener("DOMContentLoaded", function(event) {
+            const game = new Game();
+        });
+    </script>
 </head>
 <body>
-    <script src="javascript/myscript.js"></script>
+    <canvas id="game" width="800" height="600" style="border: 1px solid #000"></canvas>
 </body>
 </html>
